--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title>Skillsheet</title>
     <%= csrf_meta_tags %>
-    <%= stylesheet_link_tag    'application', media: 'all' %>
+    <%= stylesheet_link_tag    'home', media: 'all' %>
   </head>
 
   <body>
