Use some bootstrap

--- a/frontend/app/templates/employees.hbs
+++ b/frontend/app/templates/employees.hbs
@@ -1,3 +1,4 @@
+<h1>Employees</h1>
 <ul>
   {{#each content as |employee| }}
   <li>{{#link-to 'employee' employee}}{{employee.fullName}}{{/link-to}}</li>
