--- a/frontend/app/templates/employee.hbs
+++ b/frontend/app/templates/employee.hbs
@@ -1,6 +1,15 @@
 <h1>{{model.fullName}}</h1>
 
 <div class="row">
+  <div class="dropdown">
+    {{#bs-button type="primary"}}
+    Filter
+    <span class="caret"></span>
+    {{/bs-button}}
+  </div>
+  {{#if language}}
+    {{text-chip text=language action=(action "resetLanguage")}}
+  {{/if}}
   <ul>
     {{#each model.languages as |language| }}
     <li>{{#link-to 'employee' (query-params language=language.name)}}{{ language.name }}{{/link-to}}
@@ -21,9 +30,9 @@
   </div>
   <div class="col-md-9">
     <ul>
-    {{#each filteredSkills as |skill| }}
+      {{#each filteredSkills as |skill| }}
       <li>{{ skill.technology }}</li>
-    {{/each}}
+      {{/each}}
     </ul>
   </div>
 </div>
