--- a/frontend/app/templates/employee.hbs
+++ b/frontend/app/templates/employee.hbs
@@ -22,6 +22,9 @@
         {{#if level}}
           {{text-chip text=level action=(action "resetLevel")}}
         {{/if}}
+        {{#if years}}
+          {{text-chip text=years action=(action "resetYears")}}
+        {{/if}}
         {{#filter-panel-content isVisible=isExpanded}}
           <div class="col-md-3">
             <ul class="list-group">
@@ -61,13 +64,13 @@
             <ul class="list-group">
               <li class="list-group-item"><h4>Years of Experience</h4></li>
               <li class="list-group-item">
-                {{#link-to 'employee' (query-params startedOn='less-than-a-year')}}Less than a year{{/link-to}}
+                {{#link-to 'employee' (query-params years='less-than-a-year')}}Less than a year{{/link-to}}
               </li>
               <li class="list-group-item">
-                {{#link-to 'employee' (query-params startedOn='between-1-and-5-years')}}Between 1 and 5 years{{/link-to}}
+                {{#link-to 'employee' (query-params years='between-1-and-5-years')}}Between 1 and 5 years{{/link-to}}
               </li>
               <li class="list-group-item">
-                {{#link-to 'employee' (query-params startedOn='more-than-5-years')}}More than 5 years{{/link-to}}
+                {{#link-to 'employee' (query-params years='more-than-5-years')}}More than 5 years{{/link-to}}
               </li>
             </ul>
 
@@ -79,13 +82,6 @@
       <ul>
         {{#each filteredSkills as |skill| }}
         <li>{{skill.technology}}</li>
-        <li>
-          <ul>
-            {{#each skill.experiences as |experience|}}
-            <li>{{experience.level}}</li>
-            {{/each}}
-          </ul>
-        </li>
         {{/each}}
       </ul>
     </div>
