--- a/frontend/app/templates/employee.hbs
+++ b/frontend/app/templates/employee.hbs
@@ -73,7 +73,11 @@
                 {{#link-to 'employee' (query-params years='more-than-5-years')}}More than 5 years{{/link-to}}
               </li>
             </ul>
-
+          </div>
+          <div class="col-md-12">
+            <div class="pull-right">
+            {{#bs-button action="resetAll"}}Clear All Filters{{/bs-button}}
+            </div>
           </div>
         {{/filter-panel-content}}
       {{/filter-panel}}
