--- a/frontend/app/templates/components/skill-list-item.hbs
+++ b/frontend/app/templates/components/skill-list-item.hbs
@@ -1,5 +1,5 @@
-<div class="col-md-2 skill-item-title">{{skill.technology}}</div>
-<div class="col-md-10 skill-item-timeline">
+<div class="skill-item-title">{{skill.technology}}</div>
+<div class="skill-item-timeline">
   {{#each skill.experiences as |experience|}}
     {{timeline-bar-segment experience=experience from=from}}
   {{/each}}
