--- a/frontend/app/templates/employee.hbs
+++ b/frontend/app/templates/employee.hbs
@@ -26,52 +26,46 @@
           {{text-chip text=years action=(action "reset" "years")}}
         {{/if}}
         {{#filter-panel-content isVisible=isExpanded}}
-          <div class="col-md-3">
-            <ul class="list-group">
-              <li class="list-group-item"><h4>Languages</h4></li>
+          <div class="col-md-12 filter-panel-keys">
+            <ul>
+              <li><h4>Languages</h4></li>
               {{#each model.languages as |language| }}
-                <li class="list-group-item">
+                <li>
                   {{#link-to 'employee' (query-params language=language.name)}}{{language.name}}{{/link-to}}
-                  </li>
-                {{/each}}
+                </li>
+              {{/each}}
             </ul>
-          </div>
-          <div class="col-md-3">
-            <ul class="list-group">
-              <li class="list-group-item"><h4>Disciplines</h4></li>
+            <ul>
+              <li><h4>Disciplines</h4></li>
               {{#each model.disciplines as |discipline| }}
-                <li class="list-group-item">
+                <li>
                   {{#link-to 'employee' (query-params discipline=discipline.name)}}{{discipline.name}}{{/link-to}}
-                  </li>
-                {{/each}}
+                </li>
+              {{/each}}
             </ul>
-          </div>
-          <div class="col-md-3">
-            <ul class="list-group">
-              <li class="list-group-item"><h4>Level</h4></li>
-              <li class="list-group-item">
+            <ul>
+              <li><h4>Level</h4></li>
+              <li>
                 {{#link-to 'employee' (query-params level='Beginner')}}Beginner{{/link-to}}
-                </li>
-                <li class="list-group-item">
-                  {{#link-to 'employee' (query-params level='Intermediate')}}Intermediate{{/link-to}}
-                  </li>
-                  <li class="list-group-item">
-                    {{#link-to 'employee' (query-params level='Expert')}}Expert{{/link-to}}
-                    </li>
+              </li>
+              <li>
+                {{#link-to 'employee' (query-params level='Intermediate')}}Intermediate{{/link-to}}
+              </li>
+              <li>
+                {{#link-to 'employee' (query-params level='Expert')}}Expert{{/link-to}}
+              </li>
             </ul>
-          </div>
-          <div class="col-md-3">
-            <ul class="list-group">
-              <li class="list-group-item"><h4>Years of Experience</h4></li>
-              <li class="list-group-item">
+            <ul>
+              <li><h4>Years of Experience</h4></li>
+              <li>
                 {{#link-to 'employee' (query-params years='less-than-a-year')}}Less than a year{{/link-to}}
-                </li>
-                <li class="list-group-item">
-                  {{#link-to 'employee' (query-params years='between-1-and-5-years')}}Between 1 and 5 years{{/link-to}}
-                  </li>
-                  <li class="list-group-item">
-                    {{#link-to 'employee' (query-params years='more-than-5-years')}}More than 5 years{{/link-to}}
-                    </li>
+              </li>
+              <li>
+                {{#link-to 'employee' (query-params years='between-1-and-5-years')}}Between 1 and 5 years{{/link-to}}
+              </li>
+              <li>
+                {{#link-to 'employee' (query-params years='more-than-5-years')}}More than 5 years{{/link-to}}
+              </li>
             </ul>
           </div>
           <div class="col-md-12">
