--- a/frontend/app/templates/components/filter-panel-content.hbs
+++ b/frontend/app/templates/components/filter-panel-content.hbs
@@ -1,1 +1,6 @@
 {{yield}}
+<div class="col-md-12">
+  <div class="pull-right">
+    {{#bs-button size="sm" action="resetAll"}}Clear All Filters{{/bs-button}}
+    </div>
+</div>
