--- a/frontend/app/templates/components/timeline-bar-segment.hbs
+++ b/frontend/app/templates/components/timeline-bar-segment.hbs
@@ -1,2 +1,2 @@
 &nbsp;
-{{#bs-popover placement="left" triggerEvents="hover"}}{{experience.level}} since {{date-to-year experience.startedOn}}{{/bs-popover}}
+{{#bs-popover placement="left" triggerEvents="hover"}}{{experience.level}} in <em>{{technology}}</em> since {{date-to-year experience.startedOn}}{{/bs-popover}}
