--- a/frontend/app/templates/employee.hbs
+++ b/frontend/app/templates/employee.hbs
@@ -70,6 +70,11 @@
                 </li>
               </ul>
             </div>
+            <div class="col-md-12">
+              <div class="pull-right">
+                {{#bs-button size="sm" action="resetAll"}}Clear All Filters{{/bs-button}}
+                </div>
+            </div>
           {{/filter-panel-content}}
         {{/filter-panel}}
         {{skill-list skills=filteredSkills from=startedFrom}}
