--- a/frontend/app/templates/employee.hbs
+++ b/frontend/app/templates/employee.hbs
@@ -1,12 +1,14 @@
-<h1>{{model.fullName}}</h1>
-
 <div class="row">
   <div class="col-md-3">
-    <div class="thumbnail">
-      <img src={{model.image}}>
-      <div class="caption">
-        <h3>{{model.fullName}}</h3>
-        <p>{{markdown-to-html model.bio}}</p>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">{{model.fullName}}</h3>
+      </div>
+      <div class="panel-body">
+        <div class="thumbnail">
+          <img src={{model.image}}>
+        </div>
+        {{markdown-to-html model.bio}}
       </div>
     </div>
   </div>
