--- a/frontend/app/templates/employees.hbs
+++ b/frontend/app/templates/employees.hbs
@@ -1,13 +1,17 @@
-<h1>Employees</h1>
-<div class="panel panel-default bootcards-summary">
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Employees</h3>
+  </div>
   <div class="panel-body">
     <div class="row">
       {{#each content as |employee| }}
       <div class="col-md-2 col-sm-3 col-xs-4">
-        {{#link-to 'employee' employee class="bootcards-summary-item"}}
-          <img src={{employee.image}}>
-          <h4>{{employee.fullName}}</h4>
-        {{/link-to}}
+        <div class="employee-item">
+          {{#link-to 'employee' employee class="thumbnail"}}
+            <img src={{employee.image}}>
+            <h4>{{employee.fullName}}</h4>
+          {{/link-to}}
+        </div>
       </div>
       {{/each}}
     </div>
